<resources>
    <string name="app_name">SharkNet</string>

    <!--Activity titles-->
    <string name="activity_title_contacts">Contacts</string>
    <string name="activity_title_con_new">New Contact</string>
    <string name="activity_title_con_detail_view">Contact</string>
    <string name="activity_title_chat_new">Create new Chat</string>
    <string name="activity_title_chat_detail">Chat Messages</string>
    <string name="activity_title_chat_detail_add_contact">New Contact</string>
    <string name="activity_title_chat_detail_settings">Chat Settings</string>
    <string name="activity_title_radar">Radar</string>
    <string name="activity_title_nfc">NFC</string>
    <string name="activity_title_chat">Chats</string>
    <string name="activity_title_profile">Profil</string>
    <string name="activity_title_pki">PKI</string>
    <string name="activity_title_account">Account</string>
    <string name="activity_title_chat_settings">Settings</string>

    <!--SideNav / Menu-->
    <!-- SideNav / Menu -->
    <string name="sidenav_drawer_open">open</string>
    <string name="sidenav_drawer_close">close</string>

    <!--<string name="sidenav_menu_cat_system">System</string>-->
    <!--<string name="sidenav_item_settings">Settings</string>-->
    <!--<string name="sidenav_item_log">Logs</string>-->

    <string name="sidenav_item_radar">Radar</string>
    <string name="sidenav_item_contacts">Contacts</string>
    <string name="sidenav_item_chats">Chats</string>
    <string name="sidenav_item_account">Account</string>
    <string name="sidenav_item_nfc">NFC</string>
    <string name="sidenav_item_pki">PKI</string>

    <string name="generate_dummy_data">Generate Dummy data</string>
    <string name="activity_title_pki_certificate_detail">Certificate Detail</string>
    <string name="activity_title_pki_public_key_detail">PublicKey Detail</string>
    <string name="init_owner">Init Owner</string>
    <string name="activity_title_pki_detail">PKI Detail</string>
    <string name="nfc_message_received_msg">Send and Receive a Message</string>
    <string name="nfc_message_received_title">New Message</string>
    <string name="nfc_message_completed_msg">The exchange was complete! You can decouple the phones!</string>
    <string name="nfc_message_completed_title">Exchange complete!</string>

    <!--Chat-->
    <string name="contact_profile">Contact profile</string>
    <string name="contact_block">Block Contact</string>
    <string name="message_detail">Message details</string>
    <string name="message_dislike">The Message is dumb</string>
    <string name="activity_title_chat_message_detail">ChatMessageDetailActivity</string>
    <string name="chat_delete">Delete Chat</string>
    <string name="chat_settings">Settings</string>
    <string name="chat_attachment">Attachments</string>
    <string name="chat_attachment_take_photo">Create Photo</string>
    <string name="chat_attachment_send_file">Attach file</string>
    <string name="chat_attachment_send_photo">Add Photo</string>
    <string name="chat_new_create">Create</string>
    <string name="chat_settings_save">Save</string>
    <string name="chat_add_contact">Add</string>
    <string name="chat_progress_load_messages">Loading Messages</string>
    <string name="chat_progress_load_chats">Loading Chats</string>
    <string name="chat_new">New Chat</string>
    <string name="chat_progress_load_contacts">Loading Contacts</string>
    <string name="chat_write_hint">write Message</string>

    <!--Contact-->
    <string name="contact_label_name">Name</string>
    <string name="contact_image_description">Profile picture</string>
    <string name="contact_label_nickname">Username</string>
    <string name="contact_label_email">Email</string>
    <string name="contact_button_block">Block</string>
    <string name="contact_button_delete">Delete</string>
    <string name="contact_button_key">Show PublicKey</string>

    <!--Account-->
    <string name="account_label_name">Name</string>
    <string name="account_label_mail">Mail</string>
    <string name="account_label_username">Username</string>
    <string name="account_label_password">Password</string>
    <string name="account_label_pop_server">POP3 Server</string>
    <string name="account_label_smtp_server">SMTP Server</string>
    <string name="account_button_save">Save</string>
    <string name="account_button_reset">Reset</string>
    <string name="account_button_test_mail">Test Mail Settings</string>
    <string name="account_status_mail_settings_untested">Not yet tested.</string>
    <string name="account_status_mail_settings_tested_success">Test succeeded!</string>
    <string name="account_status_mail_settings_tested_fail">Test failed. Try again with other Settings</string>
    <string name="account_progress">Loading Account data.</string>


    <!--Startup + login-->
    <string name="main_startup_profile">Use old Account</string>
    <string name="main_startup_new_profile">Create new Account</string>
    <string name="main_new_profile_image_label">Profile picture</string>
    <string name="main_new_profile_name_info"></string>
    <string name="main_new_profile_name_label">Account name</string>
    <string name="main_new_profile_name_hint">e.g. Max Mustermann</string>
    <string name="main_new_profile_address_info">The here provided Information will allow us to activate the
    Mail functionality. Therefor it will be possible to send and retrieve Messages using Mail.
    We recommend not using Emails from the big companies to provide multiple different servers.</string>
    <string name="main_new_profile_address_label">Mail</string>
    <string name="main_new_profile_address_hint">e.g. max@mustermann.de</string>
    <string name="main_new_profile_password_label">Password</string>
    <string name="main_new_profile_username_label">Username</string>
    <string name="main_new_profile_incoming_imap_server_label">POP3 Server</string>
    <string name="main_new_profile_outgoing_imap_server_label">SMTP Server</string>
    <string name="main_new_profile_server_hint">[IP/URL]</string>
    <string name="main_new_profile_server_test_button">test Server</string>
    <string name="main_new_profile_server_test_status">not yet tested</string>
    <string name="main_new_profile_next_fragment">Next</string>
    <string name="main_new_profile_finish">Create Account</string>
    <string name="main_previous_fragment">Back</string>
    <string name="main_new_profile_empty_name">The name should not be empty.</string>

    <!-- NFC -->
    <string name="nfc_info_before">NFC will allow you to exchange your profile data with another peer and also
    changing and signing the keys with the peer. One of both needs to initiate NFC by pressing the button.
        The process may need up to 10 Seconds so hold still!</string>
    <string name="nfc_info_after"></string>
    <string name="account_save">Save</string>
    <string name="radar_clear">Clear</string>
    <string name="title_activity_chat_annotation_time">ChatAnnotationTimeActivity</string>
    <string name="start_time">start time</string>
    <string name="end_time">end time</string>
    <string name="start_end">Please choose start and end time</string>
    <string name="title_activity_chat_annotation_location">ChatAnnotationLocationActivity</string>
    <string name="title_activity_peer_annotation_time">ChatAnnotationPeerActivity</string>
    <string name="title_activity_semantic_broadcast">SemanticBroadcastActivity</string>
    <string name="entry_profile">Entry Profile</string>
    <string name="active_entry_profile">Active Entry Profile</string>
    <string name="title_activity_entry_profile">EntryProfileActivity</string>
    <string name="title_activity_broadcast">BroadcastActivity</string>
    <string name="sidenav_item_semantic_broadcast">Semantic Broadcast</string>

    <!-- Schnitzeljagd -->
    <string name="sidenav_item_schnitzeljagd">Schnitzeljagd</string>
    <string name="addNewSchnitzelText">Wie kommt man zum nächsten Schnitzel</string>
    <string name="add_btn">Erstelle dieses Schnitzel</string>
    <string name="finish_btn">Erstelle Schnitzeljagd</string>
    <string name="schnitzel_loeschen">Löschen</string>
    <string name="schnitzel_bearbeiten">Bearbeiten</string>
    <string name="addNewSchnitzelJagdText">Name der Schnitzeljagd:</string>
    <string name="schnitzeljagd_main_menu_admin">Admin mode</string>
    <string name="schnitzeljagd_main_menu_orte">Liste der Orte</string>

    <!-- Entry Profile -->
    <string name="entryprof_enablelocationprof">Enable Location Profiling</string>

    <string name="google_maps_key">PLACEHOLDER! DO NOT INSERT KEY HERE! Follow the Google Maps Docu on how to add Debug API Key to project. If you have done so DONT push it to git!</string>

    <!-- LocationTracker Service -->
    <string name="locationprofile_notify_title">SharkNet Location Profiler</string>
    <string name="locationprofile_notify_content">This Service tracks your location so it can be added to your Location Profile.</string>
</resources>
