<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:mApp="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/primary"
                                             android:orientation="vertical"
                                             tools:layout_editor_absoluteY="25dp"
                                             tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="25dp"
        android:labelFor="@+id/editTextMailAddress"
        android:text="@string/main_new_profile_address_label"
        android:textColor="@color/grey_300"
        android:textSize="20sp"
        android:textStyle="bold"
        mApp:layout_constraintLeft_toLeftOf="parent"
        mApp:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp"
        android:labelFor="@+id/editTextMailPassword"
        android:text="@string/main_new_profile_password_label"
        android:textColor="@color/grey_300"
        android:textSize="20sp"
        android:textStyle="bold"
        mApp:layout_constraintTop_toBottomOf="@+id/editTextMailAddress"
        android:layout_marginLeft="24dp"
        mApp:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editTextMailPassword"
        android:text="@string/main_new_profile_username_label"
        android:textColor="@color/grey_300"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="0dp"
        mApp:layout_constraintLeft_toLeftOf="@+id/editTextMailUsername"
        mApp:layout_constraintTop_toTopOf="@+id/textView5"
        android:layout_marginTop="0dp"/>

    <EditText
        android:id="@+id/editTextMailUsername"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/main_new_profile_username_label"
        android:inputType="text"
        mApp:layout_constraintRight_toRightOf="parent"
        mApp:layout_constraintTop_toTopOf="@+id/editTextMailPassword"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="0dp"
        android:labelFor="@+id/editTextIncoming"
        android:text="@string/main_new_profile_incoming_imap_server_label"
        android:textColor="@color/grey_300"
        android:textSize="20sp"
        android:textStyle="bold"
        mApp:layout_constraintLeft_toLeftOf="parent"
        mApp:layout_constraintTop_toBottomOf="@+id/editTextMailPassword"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="0dp"
        android:labelFor="@+id/editTextOutgoing"
        android:text="@string/main_new_profile_outgoing_imap_server_label"
        android:textColor="@color/grey_300"
        android:textSize="20sp"
        android:textStyle="bold"
        mApp:layout_constraintLeft_toLeftOf="parent"
        mApp:layout_constraintTop_toBottomOf="@+id/editTextIncoming"/>

    <EditText
        android:id="@+id/editTextOutgoing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="-1dp"
        android:ems="10"
        android:hint="@string/main_new_profile_server_hint"
        android:inputType="text"
        mApp:layout_constraintLeft_toLeftOf="parent"
        mApp:layout_constraintTop_toBottomOf="@+id/textView9"/>

    <Button
        android:id="@+id/next_fragment"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_chevron_right_grey_200_24dp"
        android:text="@string/main_new_profile_finish"
        android:textColor="@color/grey_200"
        mApp:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="9dp"
        android:layout_marginRight="8dp"
        mApp:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:id="@+id/previous_fragment"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:drawableStart="@drawable/ic_chevron_left_grey_200_24dp"
        android:text="@string/main_previous_fragment"
        android:textColor="@color/grey_200"
        mApp:layout_constraintBottom_toBottomOf="parent"
        mApp:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/editTextMailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/main_new_profile_address_hint"
        android:inputType="textEmailAddress"
        mApp:layout_constraintLeft_toLeftOf="parent"
        mApp:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginRight="24dp"
        mApp:layout_constraintRight_toRightOf="parent"
        mApp:layout_constraintHorizontal_bias="0.0"/>

    <EditText
        android:id="@+id/editTextMailPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        mApp:layout_constraintTop_toBottomOf="@+id/textView5"
        mApp:layout_constraintRight_toLeftOf="@+id/editTextMailUsername"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="24dp"
        mApp:layout_constraintLeft_toLeftOf="parent"
        mApp:layout_constraintHorizontal_bias="0.486"/>

    <EditText
        android:id="@+id/editTextIncoming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="-2dp"
        android:ems="10"
        android:hint="@string/main_new_profile_server_hint"
        android:inputType="text"
        mApp:layout_constraintLeft_toLeftOf="parent"
        mApp:layout_constraintTop_toBottomOf="@+id/textView8"/>

    <Button
        android:id="@+id/buttonTestServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/main_new_profile_server_test_button"
        android:theme="@style/Button.accent"
        mApp:layout_constraintLeft_toLeftOf="parent"
        mApp:layout_constraintTop_toBottomOf="@+id/editTextOutgoing"/>

    <TextView
        android:id="@+id/textViewTestServerStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="24dp"
        android:text="@string/main_new_profile_server_test_status"
        mApp:layout_constraintBaseline_toBaselineOf="@+id/buttonTestServer"
        mApp:layout_constraintLeft_toRightOf="@+id/buttonTestServer"
        mApp:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/main_new_profile_address_info"
        mApp:layout_constraintBottom_toTopOf="@+id/next_fragment"
        mApp:layout_constraintLeft_toLeftOf="parent"
        mApp:layout_constraintRight_toRightOf="parent"
        mApp:layout_constraintTop_toBottomOf="@+id/buttonTestServer"
        mApp:layout_constraintHorizontal_bias="0.0"
        mApp:layout_constraintVertical_bias="0.0"/>

</android.support.constraint.ConstraintLayout>