<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:mApp="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/primary"
                                             android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="31dp"
        android:labelFor="@+id/profile_name"
        android:text="@string/main_new_profile_name_label"
        android:textColor="@color/grey_300"
        android:textSize="20sp"
        android:textStyle="bold"
        mApp:layout_constraintLeft_toLeftOf="@+id/profile_image"
        mApp:layout_constraintTop_toBottomOf="@+id/profile_image"/>

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:hint="@string/main_new_profile_name_hint"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textStyle="italic"
        mApp:layout_constraintHorizontal_bias="0.0"
        mApp:layout_constraintLeft_toLeftOf="@+id/textView"
        mApp:layout_constraintRight_toRightOf="parent"
        mApp:layout_constraintTop_toBottomOf="@+id/textView"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:labelFor="@+id/profile_image"
        android:text="@string/main_new_profile_image_label"
        android:textAllCaps="false"
        android:textColor="@color/grey_300"
        android:textSize="20sp"
        android:textStyle="bold"
        mApp:layout_constraintLeft_toLeftOf="parent"
        mApp:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey_300"
        android:elevation="10dp"
        mApp:layout_constraintLeft_toLeftOf="@+id/textView3"
        mApp:layout_constraintTop_toBottomOf="@+id/textView3"
        mApp:srcCompat="@drawable/ic_person_accent_48dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="7dp"
        android:text="@string/main_new_profile_name_info"
        mApp:layout_constraintTop_toBottomOf="@+id/profile_name"
        android:layout_marginRight="24dp"
        mApp:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        mApp:layout_constraintLeft_toLeftOf="@+id/profile_name"
        mApp:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp"
        mApp:layout_constraintBottom_toTopOf="@+id/next_fragment"/>

    <Button
        android:id="@+id/next_fragment"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"

        android:text="@string/main_new_profile_next_fragment"
        android:textColor="@color/grey_200"
        mApp:layout_constraintBottom_toBottomOf="parent"
        mApp:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/previous_fragment"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/main_previous_fragment"
        android:textColor="@color/grey_200"
        mApp:layout_constraintBottom_toBottomOf="parent"
        mApp:layout_constraintLeft_toLeftOf="parent"/>
</android.support.constraint.ConstraintLayout>