<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/primary"
                                             android:orientation="vertical"
                                             tools:layout_editor_absoluteY="25dp"
                                             tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/profile_mail_1"
        android:text="@string/main_new_profile_address_label"
        android:textColor="@color/grey_300"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/profile_mail_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:hint="@string/main_new_profile_name_hint_1"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="@+id/profile_mail_1"
        app:layout_constraintTop_toBottomOf="@+id/profile_mail_1"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/profile_mail_1"
        app:layout_constraintHorizontal_bias="1.0"/>

    <EditText
        android:id="@+id/profile_mail_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:ems="10"
        android:hint="@string/main_new_profile_name_hint_1"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="@+id/profile_mail_1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_mail_2"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/profile_mail_1"/>

    <EditText
        android:id="@+id/profile_mail_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/main_new_profile_address_hint"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textStyle="italic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/main_new_profile_name_info"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/next_fragment"
        tools:layout_editor_absoluteX="25dp"/>

    <Button
        android:id="@+id/next_fragment"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_chevron_right_grey_200_24dp"
        android:text="@string/main_new_profile_finish"
        android:textColor="@color/grey_200"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="9dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:id="@+id/previous_fragment"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:drawableStart="@drawable/ic_chevron_left_grey_200_24dp"
        android:text="@string/main_previous_fragment"
        android:textColor="@color/grey_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</android.support.constraint.ConstraintLayout>